# civisynth

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/evals/: claims_benchmark.jsonl
docs/: index.html
examples/: quickstart.py
src/civisynth/: __init__.py  api.py  cli.py  config.py  embeddings.py
src/civisynth/factcheck/: __init__.py  claims.py  evals.py  retrieval.py  verdict.py
src/civisynth/forecast/: __init__.py  engine.py
src/civisynth/ingest/: __init__.py  models.py  rss.py
src/civisynth/legislation/: __init__.py  bills.py
src/civisynth/llm/: anthropic_provider.py  base.py  mock.py  openai_provider.py
src/civisynth/narratives/: __init__.py  tracker.py
tests/: test_embeddings.py  test_factcheck.py  test_forecast.py  test_ingest.py  test_legislation.py  test_llm.py  test_narratives.py
