[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civisynth"
version = "0.1.0"
description = "Open political intelligence platform: narrative tracking, claim fact-checking with evals, legislative intelligence, and election forecasting."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aravind Balaji" }]
requires-python = ">=3.10"
keywords = ["politics", "nlp", "llm", "rag", "fact-checking", "election-forecasting", "civic-tech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
civisynth = "civisynth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/civisynth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
